--- a/chooser/module-chooser-ops.html
+++ b/chooser/module-chooser-ops.html
@@ -26,7 +26,7 @@
                     <hr/>
 
                     <div id="filter-simmer" class="row">
-                        <h2>Are you even a simmer?</h2>
+                        <h2>Are you a fidelity enjoyer?</h2>
                         <div class="col">
                             <input type="checkbox" class="btn-check" id="simmer1" name="simmer" autocomplete="off">
                             <label class="btn btn-outline-primary" for="simmer1">Full-Fidelity only</label>
@@ -50,7 +50,7 @@
                     <hr/>
 
                     <div id="filter-pilot" class="row needs-simmer1">
-                        <h2>OK to have inferior stuff like missing pilot?</h2>
+                        <h2>OK to have stuff like missing pilot?</h2>
                         <div class="col">
                             <input type="checkbox" class="btn-check" id="pilot1" name="pilot" autocomplete="off">
                             <label class="btn btn-outline-primary" for="pilot1">Are you kidding</label>
@@ -219,7 +219,7 @@
                         <h2>Choose one of these</h2>
                         <div class="col">
                             <input type="checkbox" class="btn-check" id="razbam1" name="razbam" autocomplete="off">
-                            <label class="btn btn-outline-primary" for="razbam1">Quadruple monitor WSO</label>
+                            <label class="btn btn-outline-primary" for="razbam1">Quadruple monitors</label>
                             <input type="checkbox" class="btn-check" id="razbam2" name="razbam" autocomplete="off">
                             <label class="btn btn-outline-primary" for="razbam2">Vertical takeoff</label>
                             <input type="checkbox" class="btn-check" id="razbam3" name="razbam" autocomplete="off">
